@@ -8,11 +8,14 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-	{% if entries %}
+    {% if too_short %}
+	{% trans 'Queries involving grouping must be at least 3 characters long.' %}
+    {% else %}
+	{% if entries and result_count%}
 		{% if group %}
 		<!-- If grouping is desired -->
 			{% regroup entries by package as pkg_list %}
-			<p>{{ result_count }} results.</p>
+			<p>{% blocktrans %}{{ result_count }} results.{% endblocktrans %}</p>
 			<h2>{% blocktrans %}Packages containing files related to {{ term }}{% endblocktrans %}:</h2>
 			
 			<table>
@@ -47,7 +50,7 @@
 				</div>
 				
 				<div class="pagination">
-				    <p>{{ result_count }} results<br/>Showing results between {{ entries.start_index }} and {{ entries.end_index }}</p>
+				    <p>{% blocktrans with entries.start_index as si and entries.end_index as ei%} {{ result_count }} results<br/>Showing results between {{ si }} and {{ ei }}{% endblocktrans %}</p>
 				    
 				</div>
 				<table>
@@ -64,7 +67,7 @@
 			<!-- Search for term in all packages-->
 				<h2>{% blocktrans %}Packages and paths of files related to {{ term }}:{% endblocktrans %}</h2>
 				<div class="pagination">
-				    <p>{{ result_count }} results<br/>Showing results between {{ entries.start_index }} and {{ entries.end_index }}</p>
+				    <p>{% blocktrans with entries.start_index as si and entries.end_index as ei%} {{ result_count }} results<br/>Showing results between {{ si }} and {{ ei }}{% endblocktrans %}</p>
 				</div>
 				<table>
 					<tr class="table-top">
@@ -83,17 +86,17 @@
 			<div class="pagination">
 			    <span class="step-links">
 				{% if entries.has_previous %}
-				    <a href="?page=1">First</a> | 
-				    <a href="?page={{ entries.previous_page_number }}">Previous</a> | 
+				    <a href="?page=1">{% trans 'First' %}</a> | 
+				    <a href="?page={{ entries.previous_page_number }}">{% trans 'Previous' %}</a> | 
 				{% endif %}
 
 				<span class="current">
-				    Page {{ entries.number }} / {{ entries.paginator.num_pages }}
+				   {% blocktrans with entries.number as pn and entries.paginator.num_pages as np%}Page {{ pn }} / {{ np }}{% endblocktrans %}
 				</span>
 
 				{% if entries.has_next %}
-				    | <a href="?page={{ entries.next_page_number }}">Next</a> | 
-				    <a href="?page={{ entries.paginator.num_pages }}">Last</a>
+				    | <a href="?page={{ entries.next_page_number }}">{% trans 'Next' %}</a> | 
+				    <a href="?page={{ entries.paginator.num_pages }}">{% trans 'Last' %}</a>
 				{% endif %}
 				
 			    </span>
@@ -105,4 +108,5 @@
 	{% else %}
 		<h3>{% trans 'No results...' %}</h3>
 	{% endif %}
+    {% endif %}
 {% endblock %}
